--- a/ResponsiveWeb/WCBcafe/02/css/style.css
+++ b/ResponsiveWeb/WCBcafe/02/css/style.css
@@ -237,7 +237,9 @@ aside p {
 .sub-menu a:hover {
     color: #0bd;
 }
-
+/* menu
+----------------------- 
+ */
 #menu {
     background-image: url('../../../../siteimages/menu-bg.jpg');
     min-height: 100vh;
@@ -252,6 +254,25 @@ aside p {
     margin: 10px 0 0;
 }
 
+.grid {
+    display: grid;
+    gap: 26px;
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    margin-top: 6%;
+    margin-bottom: 50px;
+}
+
+.big-box {
+    grid-column: 1/3;
+    grid-row: 1/3;
+}
+
+.big-box img {
+    height: 94%;
+    width: 100%;
+    object-fit: cover; /*가로, 세로 비율에 따라 이미지가 변하지 않고 배율을 유지하고 싶을 때*/
+}
 /* 0~600px 사이의 화면에 적용 */
 @media (max-width: 600px) {
     .page-title {
@@ -332,5 +353,14 @@ aside p {
     /* MENU */
     .menu-content {
         margin-top: 20%;
+    }
+
+    .big-box {
+        grid-column: auto;
+        grid-row: auto;
+    }
+
+    .big-box img {
+        height: 100%;
     }
 }
