--- a/ResponsiveWeb/WCBcafe/02/css/style.css
+++ b/ResponsiveWeb/WCBcafe/02/css/style.css
@@ -273,6 +273,91 @@ aside p {
     width: 100%;
     object-fit: cover; /*가로, 세로 비율에 따라 이미지가 변하지 않고 배율을 유지하고 싶을 때*/
 }
+
+/*Contact
+------------------------------------*/
+#contact {
+    background-image: url('../../../../siteimages/contact-bg.jpg');
+    min-height: 100vh;
+}
+
+/* form 양식*/
+form div {
+    margin-bottom: 14px;
+}
+
+label {
+    font-size: 1.125rem;
+    margin-bottom: 10px;
+    display: block;
+}
+input[type='text'],
+input[type='email'],
+textarea {
+    background: rgba(255, 255, 255, 0.5);
+    border: 1px #fff solid;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 1rem;
+}
+
+input[type='text'],
+input[type='email'] {
+    width: 100%;
+    max-width: 240px;
+}
+
+textarea {
+    width: 100%;
+    max-width: 480px;
+    height: 6rem;
+}
+
+input[type='submit'] {
+    border: none;
+    cursor: pointer;
+    line-height: 1;
+}
+
+#location {
+    padding: 4% 0;
+}
+
+#location .wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.location-info {
+    width: 22%;
+}
+
+.location-info p {
+    padding: 12px 10px;
+}
+
+.location-map {
+    width: 74%;
+}
+
+/* Contact SNS*/
+#sns {
+    background: #faf7f0;
+    padding: 4% 0;
+}
+
+#sns .wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+#sns .sub-title {
+    margin-bottom: 30px;
+}
+
+.sns-box {
+}
+
 /* 0~600px 사이의 화면에 적용 */
 @media (max-width: 600px) {
     .page-title {
@@ -362,5 +447,34 @@ aside p {
 
     .big-box img {
         height: 100%;
+    }
+
+    /* Contact */
+
+    #contact .page-title {
+        margin-top: 40px;
+    }
+
+    input[type='text'],
+    input[type='email'],
+    textarea {
+        max-width: 100%;
+    }
+
+    /* CONCAT CAFE 정보와 구글 지도, SNS */
+
+    #location .wrapper,
+    #sns .wrapper {
+        flex-direction: column;
+    }
+
+    .location-info,
+    .location-map,
+    .sns-box {
+        width: 100%;
+    }
+
+    .sns-box {
+        margin-bottom: 30px;
     }
 }
